# 2DoList

./: README.md
backend/: README.md  pyproject.toml
backend/app/: config.py  db_config.py  main.py
backend/app/config/: db_config.py
backend/app/controller/: project.py  task.py
backend/app/data/: load_test.py  project.json  task.json
backend/app/model/: project.py  task.py
backend/app/repository/: base.py  project.py  task.py
backend/app/schema/: project.py  task.py  util.py
backend/app/service/: project_service.py  task_service.py  util.py
docker-compose/: docker_compose.yaml
test-script/: data_checker.sql  initdb.sql  resetdb.sql
