[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ballsri <ball04407@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
sqlalchemy = "^2.0.1"
psycopg2 = "^2.9.5"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start ="app.main:start"
